--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -132,6 +132,7 @@
   &a {
     text-decoration: none;
   }
+}
 
 .btn-login {
   padding-bottom: 100px;
@@ -145,3 +146,4 @@
       color: $red;
     }
 }
+
