--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -12,8 +12,7 @@
 #map {
   border-radius: 10px;
   margin-top: 1.5em;
-  min-width: 30em;
-  height: 100vh;
+  width: 40em;
   position: sticky;
   top: 170px;
 }
